--- a/PYESGF_Guide.ipynb
+++ b/PYESGF_Guide.ipynb
@@ -5,7 +5,7 @@
    "id": "5cf84e0b-1ed8-436b-b54f-e4519ac9ba0f",
    "metadata": {},
    "source": [
-    "# Pyesgf tutorial: for the COASt Hackathon\n",
+    "# Pyesgf tutorial:\n",
     "---\n",
     "### Contents:\n",
     "1. CMIP file structures\n",
@@ -1450,6 +1450,7 @@
     ">            f.write(data)\n",
     "\n",
     "**We want to be able to 'race' these download processes and check that the file size is non zero**\n",
+    "\n",
     "We do this using the `func.download_concurrently` function and `func.download_and_check`\n",
     "<details>\n",
     "  <summary><code>func.download_concurrently</code></summary>\n",
