Post chat with Anna - made major improvements to the file orginization system and condensed everything into a single juypter notebook

--- a/PYESGF_Guide.ipynb
+++ b/PYESGF_Guide.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "5cf84e0b-1ed8-436b-b54f-e4519ac9ba0f",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Pyesgf tutorial:\n",
     "---\n",
